--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -1,12 +1,39 @@
-﻿.title {
+
+GridLayout {
+  margin: 20;
+}
+
+.title {
     font-size: 30;
+    margin: 5px;
+    padding-bottom: 10px;
     horizontal-align: center;
-    margin: 20;
+}
+
+.logo {
+  width : 170;
+  padding: 10;
+
 }
 
 button {
-    font-size: 42;
+    font-size: 17;
     horizontal-align: center;
+    text-transform: uppercase;
+}
+
+.tag {
+  padding :5;
+  padding-top:20;
+  padding-bottom: 20;
+  text-align: center;
+  font-weight: 500;
+  background-color: #3d5afe;
+  color:white;
+  margin: 10;
+
+  margin-top: 5;
+  margin-bottom: 5;
 }
 
 .message {
