--- a/demo/app/app.css
+++ b/demo/app/app.css
@@ -6,7 +6,7 @@ GridLayout {
 .title {
     font-size: 30;
     margin: 5px;
-    padding-bottom: 10px;
+    margin-bottom: 15px;
     horizontal-align: center;
 }
 
